--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "akamai-auth-token": "^1.0.7",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2"
